fix SonarCloud jdk17 code smells